--- a/src/i18n/en/functions.json
+++ b/src/i18n/en/functions.json
@@ -134,7 +134,7 @@
     "HOST": "Host",
     "HOST_PATH": "Host path",
     "HUGE": "Huge",
-    "HTTP_TRIGGER_MSG": "You currently didn’t add an HTTP trigger. If you deploy the function without specifying one, Nuclio will add it automatically on deploy with a default configuration. If you want to configure the HTTP trigger differently —&nbsp;<a class=\"link\" data-ng-click=\"$ctrl.addDefaultHttpTrigger()\">add it here</a>&nbsp;and edit it.",
+    "HTTP_TRIGGER_MSG": "A Nuclio function must have a single HTTP trigger. You can define such a trigger&nbsp;<a class=\"link\" data-ng-click=\"$ctrl.addDefaultHttpTrigger($event)\">here</a>. Otherwise, when deploying the function a default HTTP trigger named \"default-http\" is defined and deployed automatically unless there is a custom HTTP trigger configuration in the <a class=\"link\" data-ui-sref=\"app.project.function.edit.code\">external source code</a>.",
     "HTTP_TRIGGER_NAME_DESCRIPTION": "If the name of the HTTP trigger is <b>default-http</b> it might get overridden by a remote function specification configured in <b>Code Entry Type.</b>",
     "IMAGE_NAME": "Image name",
     "IMAGE_NAME_DESCRIPTION": "The name of the built container image (default for this function: <b>{{defaultImageName}}</b>)",
