--- a/src/i18n/en/functions.json
+++ b/src/i18n/en/functions.json
@@ -127,7 +127,7 @@
     "EXPORT_ALL_PROJECTS": "Export all projects",
     "EXPORT_FUNCTION": "Export function",
     "FAILED_TO_DEPLOY": "Failed to deploy",
-    "FUNCTION_NAME_IS_USED_WARNING": "The specified function name is already in use in another project. You can either delete the existing function or cancel.",
+    "FUNCTION_NAME_IS_USED_WARNING": "The specified function name is already used by a function in another project. To use it for a new function you must first delete the existing function.",
     "FUNCTIONS_NOT_FOUND": "There are currently no functions, you can create a function by clicking the ‘New Function’ button",
     "GET_STARTED_WITH_YOUR_PROJECT": "Get started with your project.",
     "GO_TO_EXISTING_FUNCTION": "Go to existing function",
@@ -165,7 +165,7 @@
     "MOUNT_PATH": "Mount Path",
     "MOUNT_PATH_DESCRIPTION": "A mount path for referencing the data from the function",
     "MOUNT_PATH_PARAMS": "Mount Path & Params",
-    "NAME_IN_USE": "The specified function name is already in use by an existing function in this project. You can either override the existing function or cancel.",
+    "NAME_IN_USE": "The specified function name is already used by another function in this project. To use it for a new function you need to overwrite the existing function.",
     "NAMESPACE": "Namespace",
     "NEW_API_GATEWAY": "New API Gateway",
     "NEW_FUNCTION": "New function",
@@ -180,6 +180,7 @@
     "ONBUILD_IMAGE": "Onbuild image",
     "ONBUILD_IMAGE_DESCRIPTION": "The name of an \"onbuild\" container image from which to build the function's processor image; the name can include {{ .Label }} and {{ .Arch }} for formatting",
     "OVERRIDE": "Override",
+    "OVERWRITE": "Overwrite",
     "PATH_DESCRIPTION": "A relative directory path within the data container",
     "PERSISTENT_VOLUME_CLAIM_NAME": "Persistent Volume Claim Name",
     "PLACEHOLDER": {
