--- a/src/i18n/en/functions.json
+++ b/src/i18n/en/functions.json
@@ -129,6 +129,7 @@
     "EXPAND_ALL": "Expand all",
     "EXPORT_ALL_PROJECTS": "Export all projects",
     "EXPORT_FUNCTION": "Export function",
+    "EXTERNAL_INVOCATION_URLS": "External invocation URLs",
     "FAILED_TO_DEPLOY": "Failed to deploy",
     "FUNCTION_NAME_IS_USED_WARNING": "The specified function name is already used by a function in another project. To use it for a new function you must first delete the existing function.",
     "FUNCTIONS_NOT_FOUND": "There are currently no functions, you can create a function by clicking the ‘New Function’ button",
@@ -149,6 +150,7 @@
     "IMPORT_PROJECTS": "Import project(s)",
     "INITIAL_OFFSET": "Initial offset",
     "INGRESSES_HOSTS": "Ingress hosts",
+    "INTERNAL_INVOCATION_URLS": "Internal invocation URLs",
     "INVOCATION": "Invocation",
     "INVOCATION_PER_SEC": "Invocation/s",
     "INVOCATION_URL": "Invocation URL",
