--- a/src/i18n/en/functions.json
+++ b/src/i18n/en/functions.json
@@ -270,7 +270,7 @@
     "RESPONSE": "Response",
     "RESPONSE_HEADERS": "Response headers",
     "RESPONSE_IMAGE": "Response image",
-    "REVERT_NODE_SELECTORS_TO_DEFAULTS": "Are you sure you want revert the node selectors to its defaults?",
+    "REVERT_NODE_SELECTORS_TO_DEFAULTS_CONFIRM": "Are you sure you want revert the node selectors to its defaults?",
     "REVERT_TO_DEFAULTS": "Revert to defaults",
     "RUNTIME": "Runtime",
     "RUNTIME_ATTRIBUTES": "Runtime Attributes",
@@ -381,6 +381,6 @@
     "WORKER_AVAILABILITY_TIMEOUT": "Worker availability timeout",
     "WORKER_AVAILABILITY_TIMEOUT_MILLISECONDS": "Worker availability timeout (Milliseconds)",
     "WORKER_AVAILABILITY_TIMEOUT_MILLISECONDS_DESCRIPTION": "The number of milliseconds to wait for a worker if one is not available.\n(default: {{default}})",
-    "YES_REVERT": "YES, REVERT",
+    "YES_REVERT_CONFIRM": "Yes, revert",
     "YOU_CAN_DOWNLOAD_RESPONSE_BODY": "You can download response body"
 }
