[Nuclio] Detect function deleted while deploying

--- a/src/i18n/en/functions.json
+++ b/src/i18n/en/functions.json
@@ -74,6 +74,7 @@
     "DELETE_PROJECTS_CONFIRM": "Delete selected projects?",
     "DELETE_VERSION": "Delete version",
     "DELETE_VERSIONS_CONFIRM": "Are you sure you want to delete selected versions?",
+    "DELETED_FUNCTION_WHILE_DEPLOYING_MSG": "The function was deleted by someone else before it completed its deployment. You can deploy it again to recreate it, or go to the functions list.",
     "DEPENDENCIES": "Dependencies",
     "DEPLOY": "Deploy",
     "DEPLOYING": "Deploying...",
@@ -134,6 +135,7 @@
     "FUNCTIONS_NOT_FOUND": "There are currently no functions, you can create a function by clicking the ‘New Function’ button",
     "GET_STARTED_WITH_YOUR_PROJECT": "Get started with your project.",
     "GO_TO_EXISTING_FUNCTION": "Go to existing function",
+    "GO_TO_FUNCTIONS": "Go to functions",
     "HANDLER": "Handler",
     "HEADERS": "Headers",
     "HISTORY": "History",
