--- a/src/i18n/en/functions.json
+++ b/src/i18n/en/functions.json
@@ -11,6 +11,8 @@
     "API_GATEWAYS_NOT_FOUND": "There are currently no API gateways. To create an API gateway, select <strong>\"New API Gateway\"</strong> from the action toolbar.",
     "ATTACH_FILE": "Attach file",
     "AUTHENTICATION": "Authentication",
+    "AUTO_SCALE_METRICS": "Auto scale metrics",
+    "AUTO_SCALE_METRICS_DESCRIPTION": "Set one or more metrics to activate Horizontal Pod Autoscaling (HPA). Scale-up occurs when any one metric crosses its specified threshold.\nScale-down occurs when all metrics are below their thresholds.",
     "AUTH_TYPE": "Auth type",
     "BASE_IMAGE": "Base image",
     "BASE_IMAGE_DESCRIPTION": "The name of a base container image from which to build the function's processor image",
@@ -192,6 +194,7 @@
     "PERSISTENT_VOLUME_CLAIM_NAME": "Persistent Volume Claim Name",
     "PLACEHOLDER": {
         "ACTIONS": "ACTIONS",
+        "CHOOSE_METRIC": "Choose Metric",
         "DEFAULT_PROVIDED_WHEN_EMPTY": "If empty, a default one will be provided",
         "DESCRIPTION": "Description...",
         "ENTER_ACCESS_KEY": "Enter access key...",
