Fix [UI] nuclio "Failed to deploy" pop up is missing the failure reason (#1449)

--- a/src/i18n/en/functions.json
+++ b/src/i18n/en/functions.json
@@ -106,7 +106,7 @@
         "EXPORT_PROJECT": "Oops: Unknown error occurred while exporting the project",
         "EXPORT_PROJECTS": "Oops: Unknown error occurred while exporting projects",
         "FETCH_FUNCTION_LIST": "Couldn't fetch project's function list. Auto-complete suggestions will not be available. Any function name will be accepted, but the API gateway might not work properly in case such function does not exist or is not in an appropriate status.",
-        "FUNCTION_DEPLOYMENT_FAILURE": "Failed to deploy function.",
+        "FUNCTION_DEPLOYMENT_FAILURE": "Failed to deploy function. Status: {{status}}",
         "FUNCTION_NAME_ALREADY_IN_USE": "Function name already in use. Rename and try again.",
         "FUNCTIONALITY_IS_NOT_IMPLEMENTED": "This functionality is not implemented yet.",
         "GET_API_GATEWAYS": "Oops: Unknown error occurred while retrieving API Gateways",
@@ -119,6 +119,7 @@
         "GET_PROJECTS": "Oops: Unknown error occurred while retrieving projects",
         "INVALID_FILE_TYPE_EXTENSION": "Invalid file type/extension",
         "INVOKE_FUNCTION": "Oops: Error occurred while invoking. Status: ",
+        "UNKNOWN_ERROR_WITH_STATUS": "Unknown error occurred. Status: {{status}}",
         "UPDATE_FUNCTION": "Unknown error occurred while updating the function.",
         "UPDATE_FUNCTION_EVENT": "Error occurred while updating the function event.",
         "UPDATE_PROJECT": "Unknown error occurred while updating the project",
