Impl [UI] Refill passwords and access keys when duplicating function

--- a/src/i18n/en/functions.json
+++ b/src/i18n/en/functions.json
@@ -5,6 +5,7 @@
     "ACCESS_KEY_V3IO_ONLY": "Access key (required for an Iguazio Data Science Platform download)",
     "ADD_BROKER": "Add broker",
     "ADD_TOPIC": "Add topic",
+    "ALWAYS_WAIT_FOR_READINESS_TIMEOUT_EXPIRATION": "Always wait for readiness-timeout expiration",
     "ANNOTATIONS": "Annotations",
     "API_GATEWAY_IN_TRANSIENT_STATE": "API gateway update is in progress",
     "API_GATEWAYS": "API Gateways",
@@ -32,7 +33,11 @@
     "CHOOSE_TEMPLATE": "Choose a template",
     "CLICK_TO_DISABLE": "Click to disable",
     "CLICK_TO_ENABLE": "Click to enable",
+    "CODE_ENTRY_ACCESS_KEY": "{{codeEntryType}} access key",
     "CODE_ENTRY_TYPE": "Code entry type",
+    "CODE_ENTRY_TYPE_KEY": "{{codeEntryType}} key",
+    "CODE_ENTRY_TYPE_PASSWORD": "{{codeEntryType}} password",
+    "CODE_ENTRY_TYPE_TOKEN": "{{codeEntryType}} token",
     "CODE_ENTRY_TYPE_NOTE": "<b>Note:&nbsp</b>The UI configuration is merged with the external-code configuration (if exists) with precedence to the UI configuration.",
     "COLLAPSE_ALL": "Collapse all",
     "CONFIG_MAP": "Config map",
@@ -86,6 +91,7 @@
     "DISABLED_FOR_IMAGE_CODE_ENTRY_TYPE": "Disabled for \"Image\" code entry type only",
     "DROP_FILE_HERE_OR": "Drop a file here or ",
     "DUPLICATE_FUNCTION": "Duplicate function",
+    "DUPLICATE_FUNCTION_SUBTITLE": "Specify the following missing data for the function configuration.",
     "EDIT_API_GATEWAY": "Edit API Gateway",
     "EDIT_FUNCTION_EVENT": "Edit function event",
     "EDIT_PROJECT": "Edit Project",
@@ -378,7 +384,10 @@
     },
     "TOPIC": "Topic",
     "TOPICS": "Topics",
+    "TRIGGER_ACCESS_KEY": "\"{{triggerName}}\" trigger access key",
+    "TRIGGER_ACCESS_KEY_ID": "\"{{triggerName}}\" trigger access key ID",
     "TRIGGER_CRON_INTERVAL_NO_SCHEDULE": "Applicable only when \"Schedule\" is empty",
+    "TRIGGER_SECRET_ACCESS_KEY": "\"{{triggerName}}\" trigger secret access key",
     "TRIGGERS_NOT_FOUND": "There are currently no triggers, you can create a trigger by clicking the ‘Create a new trigger’ button",
     "UNIQUENESS": "Uniqueness",
     "UNSPECIFIED_FIELD_NAME": "Unspecified field name",
@@ -386,8 +395,8 @@
     "V3IO": "V3IO",
     "V3IO_INVALID_REPLICAS_MSG": "V3io_stream trigger requires min and max replicas to be the same",
     "VIEW_YAML": "View YAML",
+    "VOLUME_ACCESS_KEY": "\"{{volumeName}}\" volume access key",
     "VOLUMES": "Volumes",
-    "ALWAYS_WAIT_FOR_READINESS_TIMEOUT_EXPIRATION": "Always wait for readiness-timeout expiration",
     "WELCOME_DESCRIPTION": "Write from scratch or use an example repository to build an event driven application project.",
     "WORK_DIRECTORY": "Work directory",
     "WORKER_ALLOCATOR_NAME": "Worker allocator name",
